objects/LMS_Integration_Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Successful_AddQ_Run__c</fullName>
        <label>Last Successful AddQ Run</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notify_On_Errors__c</fullName>
        <label>Notify On Errors</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>LMS Integration Configuration</label>
</CustomObject>